# mock-cli

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mock.rs  parse.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  router.rs
examples/: full_features.yaml  petstore.yaml  swagger.yaml
npm/: publish.sh
npm/mock-cli/: package.json
