[workspace]
resolver = "3"
members = ["crates/cli", "crates/core", "crates/server"]

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
fake = { version = "5", features = ["derive"] }
openapiv3 = "2.2.0"
rand = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
