[package]
name = "cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wanghao12345/mock-cli"

[[bin]]
name = "mock-cli"
path = "src/main.rs"

[dependencies]
colored = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
mock-cli-server = { path = "../server" }
mock-cli-core = { path = "../core" }
