[package]
name = "mock-cli-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true }
openapiv3 = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
